fix overflow

--- a/src/components/ChatList/ChatList.module.css
+++ b/src/components/ChatList/ChatList.module.css
@@ -52,7 +52,7 @@
     margin-left: 50px;
   }
   .ChatListUl {
-    /* overflow-y: scroll; */
+    overflow-y: scroll;
     max-height: 500px;
   }
 }
